<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:animateLayoutChanges="true"
    android:background="#0ff"
    android:orientation="horizontal">

    <TextView
        style="@style/default_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/text_good" />

    <TextView
        style="@style/default_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/text_intermediate" />

    <TextView
        style="@style/default_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/text_bad" />

    <TextView
        android:id="@+id/txt_worst_normal"
        style="@style/default_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/text_worst" />

</LinearLayout>