<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.elyeproj.horizontaltextarragement.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/default_text_style"
        android:textStyle="bold"
        android:paddingBottom="4dp"
        android:text="@string/text_normal_title"/>

    <include layout="@layout/layout_equal_space"/>

    <Button
        android:id="@+id/btn_normal_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_remove_worst"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/default_text_style"
        android:textStyle="bold"
        android:paddingBottom="4dp"
        android:text="@string/text_wrap_title"/>

    <include layout="@layout/layout_wrap_space"/>

    <Button
        android:id="@+id/btn_wrap_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_remove_worst"/>

    <TextView
        style="@style/default_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/text_constraint_title"
        android:textStyle="bold"/>

    <include layout="@layout/layout_constraint_space"/>

    <Button
        android:id="@+id/btn_constraint_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_remove_worst"/>

</LinearLayout>
