<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#0ff">

    <TextView
        android:id="@+id/txt_good"
        style="@style/default_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_good"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_intermediate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_intermediate"
        style="@style/default_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_intermediate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_bad"
        app:layout_constraintStart_toEndOf="@+id/txt_good"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_bad"
        style="@style/default_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_bad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_worst_constraint"
        app:layout_constraintStart_toEndOf="@+id/txt_intermediate"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_worst_constraint"
        style="@style/default_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_worst"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_bad"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>